spade-tests/src/snapshots/spade_tests__ast_lowering__inst_function_used.snap
---
source: spade-tests/src/ast_lowering.rs
---
// See https://gitlab.com/spade-lang/spade/-/issues/160
mod a {
    fn foo() -> bool { true }
}

use a::foo;

entity test() -> bool {
    inst foo()
}


error: Expected foo to be an entity
  ┌─ testinput:9:10
  │
3 │     fn foo() -> bool { true }
  │     ------------------------- foo is a function
  ·
9 │     inst foo()
  │          ^^^ Expected entity


